app/assets/styles/modules/_nav.css
.nav {
  font-family: $menuFont;
  &--pull-right {
    padding-top: 90px;
  }

  li {
    list-style: none;
    display: block;
    font-size: 1.8rem;
    padding-top: 2px;
  }

  li:first-child {
    padding-top: 0px;
    padding-bottom: 2px;
    border-top: none;
  }

  &__button {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    border: none;
    cursor: pointer;
    white-space: nowrap;
    background-color: transparent;
    margin: 0 4px 0 0;
    outline-offset: 2px;
    border-radius: 9999px;
    transition: outline $menuButtonOutlineTransition $cb-ease-in-out;

    &--dark {
      color: $bodyDarkBGFontColor;
      &:focus {
        outline: 4px solid $bodyDarkBGFontColor;
      }
    }
    &--lite {
      color: $bodyLiteBGFontColor;
      text-decoration-color: $bodyLiteBGFontColor;
      &:focus {
        outline: 4px solid $bodyLiteBGFontColor;
      }
    }
    &--selected {
      text-decoration: underline;
      text-underline-offset: 0.1em;
      text-decoration-thickness: 1px;
    }
    &--icon-spacer {
      margin-right: 4px;
    }
    &--icon-stroke {
      stroke: currentColor;
      stroke-width: 2.5px;
      stroke-linecap: round;
      &--dark {
        stroke: currentColor;
        stroke-width: 2.5px;
        stroke-linecap: round;
      }
    }
    &--icon-rotate-180 {
      transform: translateX(0) translateY(0) rotate(180deg) skewX(0) skewY(0) scaleX(1) scaleY(1);
    }
    svg {
      height: 16px;
      width: 16px;
      z-index: $zIndex-1-FirstLevel;
      transition: all $menuVisibilityTransition $cb-ease-in-out;
    }

    &:hover {
      text-decoration: underline;
      text-underline-offset: 0.1em;
      text-decoration-thickness: 3px;
    }
  }

  &__topnav {
    margin: 0;
    padding: 25px 10px 0px 10px;
  }

  &__menu-content {
    position: fixed;
    transition: all $menuVisibilityTransition $cb-ease-in-out;
    text-align: left;
    height: 75px;

    &--icon-visible {
      left: calc(100% - $verticalMenuBarWidth); /* transition requires left value*/
      right: 0;
      width: $verticalMenuBarWidth;
      height: 100vh;
      max-height: calc(100vh - 90px);
      opacity: 1;
      background-color: $HeaderFooterLiteBackground;

      &--dark {
        background-color: $bodyDarkBGColor;
      }

      @mixin atMax620Wide {
        left: 0;
        width: 100%;
      }
    }

    &--allow-scroll {
      overflow-y: auto;
    }

    &--icon-hidden {
      left: 3800px; /* for transition from R to L */
    }

    @mixin atMin1200Wide {
      /* Full-screen menu */
      opacity: 1;
      width: 100%;
      display: block;
      position: static;
      text-align: center;
      padding-top: 20px;
    }

    &--collapse {
      top: -70px;
      transition: top 0.3s;
    }
    &--expand {
      top: 0;
    }
  }

  @mixin atMinWidthToHideMenuIcon {
    &--pull-right {
      padding-top: 0;
    }

    &__topnav {
      position: relative;
      left: 0;
      width: 100%;
      display: flex;
      justify-content: end;
      padding: 25px 10px 0px 10px;
    }

    li {
      float: left;
      padding-top: 0;
      border-top: none;
      font-size: 2.2rem;
      height: 45px;
    }
    li:first-child {
      padding-top: 0;
    }

    &__button {
      font: 500 1.45rem/1.25 $menuFont;
      &--dark {
        text-decoration-color: $bodyDarkBGFontColor;
      }
      &--lite {
        text-decoration-color: $bodyLiteBGFontColor;
      }
    }
  }
  &__scrollToTop {
    position: fixed;
    bottom: 2rem;
    right: 2rem;
    padding: 0.75rem 1rem;
    border: 1px solid currentColor;
    border-radius: 0.5rem;
    background: $HeaderFooterDarkBackground;
    color: white;
    cursor: pointer;
    transition: opacity 0.3s ease;
    z-index: $zIndex-5-FifthLevel;
    &:hover,
    &:focus {
      outline: 3px solid $bodyLiteBGFontColor;
    }
    &--dark {
      &:hover,
      &:focus {
        outline: 3px solid $bodyDarkBGFontColor;
      }
    }
  }
}

